--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="matrix_utils.h" />
     <ClInclude Include="multi_dimensional.h" />
     <ClInclude Include="one_dimensional.h" />
+    <ClInclude Include="symplex.h" />
     <ClInclude Include="vector_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
