--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="vector_utils.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="symplex.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
