Исправлена ошибка в покоординатном спуске в multi_dimensional.h Добавлены описания лабораторных работ в main.cpp Добавлен файл функций тестов test.h

--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="symplex.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="test.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
