--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="multi_dimensional.h" />
     <ClInclude Include="one_dimensional.h" />
     <ClInclude Include="symplex.h" />
+    <ClInclude Include="test.h" />
     <ClInclude Include="vector_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
