C++:реализована рациональная запись дробных чисел в СМ таблицах

--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="matrix_utils.h" />
     <ClInclude Include="multi_dimensional.h" />
+    <ClInclude Include="numeric_utils.h" />
     <ClInclude Include="one_dimensional.h" />
     <ClInclude Include="symplex.h" />
     <ClInclude Include="test.h" />
