--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="numeric_utils.h" />
     <ClInclude Include="one_dimensional.h" />
     <ClInclude Include="simplex.h" />
+    <ClInclude Include="template_vector.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="vector_utils.h" />
   </ItemGroup>
