--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -143,13 +143,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="matrix_utils.h" />
     <ClInclude Include="multi_dimensional.h" />
     <ClInclude Include="numeric_utils.h" />
+    <ClInclude Include="numeric_vector.h" />
     <ClInclude Include="one_dimensional.h" />
     <ClInclude Include="simplex.h" />
     <ClInclude Include="template_vector.h" />
     <ClInclude Include="test.h" />
+    <ClInclude Include="vector_itaretors.h" />
     <ClInclude Include="vector_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
