--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
@@ -57,7 +57,7 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="numeric_vector.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>NumericUtils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
