--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClInclude Include="test.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="numeric_utils.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="simplex.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -60,6 +57,12 @@
       <Filter>NumericUtils</Filter>
     </ClInclude>
     <ClInclude Include="numeric_matrix.h">
+      <Filter>NumericUtils</Filter>
+    </ClInclude>
+    <ClInclude Include="slice.h">
+      <Filter>NumericUtils</Filter>
+    </ClInclude>
+    <ClInclude Include="numeric_utils.h">
       <Filter>NumericUtils</Filter>
     </ClInclude>
   </ItemGroup>
