--- a/Java/OptimizationMethods/.gitignore
+++ b/Java/OptimizationMethods/.gitignore
@@ -1,3 +1,15 @@
-# Default ignored files
-/shelf/
-/workspace.xml
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+!**/src/main/**/build/
+!**/src/test/**/build/
