--- a/C++/OptimizationMethods/OptimizationMethods.vcxproj
+++ b/C++/OptimizationMethods/OptimizationMethods.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="numerics\rational\rational.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="numerics\numerics.h" />
     <ClInclude Include="numerics\common.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="multi_dimensional.h" />
